update app stuff

--- a/abtest.ipynb
+++ b/abtest.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:31de82ab9f21ebd9c32b7d13ff67401f4c5db433325b44ca286d8f28fc36168d"
+  "signature": "sha256:9673aaf28aa24d419a6a989bfa60c06b75d7ac9eb9d3e5c517bb8e71518a1881"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -66,8 +66,8 @@
       "        \"conversions\":30\n",
       "}\n",
       "dataB = {\n",
-      "            \"total\":100.,\n",
-      "            \"conversions\":35\n",
+      "        \"total\":100.,\n",
+      "        \"conversions\":35\n",
       "}\n",
       "\n",
       "# Naively, we might say, well\n",
@@ -92,7 +92,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Lets compare the posteriors of these though:\n",
+      "# Let's compare the posteriors of these though:\n",
       "\n",
       "def plot_posteriors(x, data, label):\n",
       "    #plot posterior of A\n",
@@ -203,8 +203,8 @@
       "        \"conversions\":35\n",
       "}\n",
       "dataB = {\n",
-      "            \"total\":10000.,\n",
-      "            \"conversions\":55\n",
+      "        \"total\":10000.,\n",
+      "        \"conversions\":55\n",
       "}\n",
       "\n",
       "# Naively, we might say, well\n",
